commons/dimas-behavior-macros/tests/behavior/02-wrong-usage.rs
// Copyright © 2025 Stephan Kunz

//! Test wrong usage of behavior derive macro `Behavior` 

#[dimas_behavior_macros::Behavior]
struct TestBehavior;

// dummy main
fn main(){}
